# poly_glot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
agent_helpers/: README.md
agent_helpers/database_mcp/: .gitignore  README.md  config.example.json  pyproject.toml
agent_helpers/database_mcp/src/database_mcp/: __init__.py  config.py  connection_url.py  db.py  server.py  sql_guard.py  ssh_tunnel.py
agent_helpers/database_mcp/tests/: test_connection_url.py
agent_helpers/server_mcp/: .gitignore  README.md  config.example.yaml  pyproject.toml
agent_helpers/server_mcp/src/server_mcp/: __init__.py  certbot_ops.py  config.py  nginx_guard.py  nginx_ops.py  remote_exec.py  remote_fs.py  server.py  ssh.py
backend/: .env.example  .gitignore  DEPLOY.md  alembic.ini  requirements.txt  run.py  translations.txt
backend/alembic/: env.py
backend/app/: chat_starters.json  main.py
frontend/: .env.example  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend-android/: .gitignore  README.md  gradle.properties  local.properties.example  settings.gradle.kts
frontend-android/app/: build.gradle.kts  proguard-rules.pro
frontend-android/gradle/: libs.versions.toml
frontend/components/: KeyboardAwareLayout.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useKeyboardAvoidance.ts
frontend/screens/: AccountScreen.tsx  ChatOverviewScreen.tsx  ChatPlaceholderScreen.tsx  ChatScreen.tsx  ExplainScreen.tsx  (+5 more)
model-tests/: README.md  compare_models.py  models.yaml  pricing.yaml  requirements.txt
(+117 files in other folders)
