[project]
name = "polyglot-database-mcp"
version = "0.1.0"
description = "Read-only PostgreSQL MCP server for Cursor agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "psycopg[binary]>=3.2.0",
    "sqlparse>=0.5.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.4,<4",
]

[project.scripts]
polyglot-database-mcp = "database_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp"]
