[project]
name = "polyglot-server-mcp"
version = "0.1.0"
description = "Read-only SSH server MCP for Cursor agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "paramiko>=3.5.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
polyglot-server-mcp = "server_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/server_mcp"]
